added object content to DOM, adjusted CSS

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 /* Box Model Hack */
 * {
   box-sizing: border-box;
-  outline: 1px solid white;
+  /* outline: 1px solid white; */
 }
 
 /******************************************
@@ -32,6 +32,8 @@ header {
 
 header p {
   font-family: "Arima Madurai", cursive;
+  background-color: rgba(26, 107, 247, 0.872);
+  padding: 0.8rem;
 }
 
 .dropdown-container {
@@ -48,7 +50,7 @@ header p {
   padding: 0.5em 1em;
   margin: 0 0.7em;
   font-family: "Arima Madurai", cursive;
-  text-align: c;
+  text-align: center;
   font-size: 1.4em;
   text-shadow: 2px 2px 3px rgb(101, 172, 238);
   border: 2px solid rgb(137, 73, 228);
@@ -59,7 +61,7 @@ button {
   background-color: rgb(92, 34, 131);
   background-image: linear-gradient(40deg, rgb(156, 94, 243), rgb(86, 44, 236));
   color: rgb(248, 246, 246);
-  padding: 0.5em 1em;
+  padding: 0.7em 1em;
   margin: 0 2em;
   font-family: "Spirax", cursive;
   font-size: 1.4em;
@@ -71,4 +73,36 @@ button {
 .dropBtn:focus,
 button:focus {
   outline: 0;
+}
+
+#showHoroscope {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.horoscopeImg {
+  width: 40vw;
+  height: 30vw;
+}
+
+#populateHoroscopeDescription {
+  width: 40vw;
+  height: 30vw;
+  font-size: 2rem;
+  font-family: "Arima Madurai", cursive;
+  margin: 0 auto;
+  text-align: center;
+}
+
+h2 {
+  font-family: "Spirax", cursive;
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 700;
+  margin-top: 5rem;
+}
+
+.hidden {
+  display: none;
 }
