--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header {
   margin: 1em 2em;
   text-align: center;
   font-family: "Spirax", cursive;
-  font-size: 1.6em;
+  font-size: 2.2em;
 }
 /******************************************
 /* ADDITIONAL STYLES
@@ -64,7 +64,7 @@ button {
   background-image: linear-gradient(40deg, rgb(156, 94, 243), rgb(86, 44, 236));
   color: rgb(248, 246, 246);
   padding: 0.7em 1em;
-  margin: 0 2em;
+  /* margin: 0 2em; */
   font-family: "Spirax", cursive;
   font-size: 1.4em;
   text-shadow: 2px 2px 3px rgb(101, 172, 238);
@@ -101,7 +101,7 @@ button:focus {
 h2 {
   font-family: "Spirax", cursive;
   text-align: center;
-  font-size: 4rem;
+  font-size: 3.6rem;
   font-weight: 700;
   margin-top: 5rem;
 }
@@ -131,7 +131,7 @@ h2 {
   .dropBtn {
     width: 100%;
     align-self: center;
-    margin-top: 0.8em;
+    margin: 0.8em 0 0;
   }
 
   #showHoroscope {
