--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,10 @@ header {
 header p {
   font-family: "Arima Madurai", cursive;
   background-color: rgba(26, 107, 247, 0.872);
-  padding: 0.8rem;
+  padding: 1rem;
+  border-radius: 15px;
+  box-shadow: 3px 2px 2px rgba(69, 3, 112, 0.4);
+  font-size: 0.8em;
 }
 
 .dropdown-container {
@@ -87,6 +90,8 @@ button:focus {
 .horoscopeImg {
   width: 40vw;
   height: 30vw;
+  border-radius: 5px;
+  box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
 #populateHoroscopeDescription {
@@ -132,6 +137,12 @@ h2 {
     width: 100%;
     align-self: center;
     margin: 0.8em 0 0;
+    max-width: 8em;
+  }
+
+  #day.dropBtn {
+    max-width: 5em;
+    margin-left: 1em;
   }
 
   #showHoroscope {
